Updated to add heatmap and markercluster

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,8 +18,8 @@
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
     <script scr="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-  
-  
+
+
   </head>
 
   <body>
@@ -49,7 +49,7 @@
           <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right navbar-right-custom">
-              <li><a href="data/Camera_Enforcement_Locations.csv" href="data/Traffic_Camera.geojson">Click HERE to Download our DATA</a></li>
+              <li><a href="datasets/cleaned_moving_violations.csv">Click here to download the data</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </div>
@@ -64,13 +64,13 @@
           <article class="description-content">
             <h1 class="description-header">Report: Moving Violation & Traffic Cameras</h1>
             <hr class="description-hr"/>
-            <p>       Our project Datasets are derived from 'opendatadc.org'. 
+            <p>       Our project Datasets are derived from 'opendatadc.org'.
 					The Datasets include "Moving Violations" issue in september 2018 and 'Traffic Camera' location.
 					We used 'leaflet' and 'geojson' to visualize the traffic violations in District of Columbia (D.C.).
 					We also used 'chart.js' which is a library we did not cover in class for graph showing the correlation between the violation locations and the fines.
             </p>
             <p>
-              D.C. has a complicated relationship with speed cameras. Research shows that speed cameras are an important tool to reduce crashes and traffic fatalities, especially as a complement to underlying road design improvements, and neighborhood residents frequently request them to slow traffic in dangerous areas. 
+              D.C. has a complicated relationship with speed cameras. Research shows that speed cameras are an important tool to reduce crashes and traffic fatalities, especially as a complement to underlying road design improvements, and neighborhood residents frequently request them to slow traffic in dangerous areas.
             </p>
           </article>
         </div>
@@ -79,7 +79,7 @@
             <article class="description-content">
               <h1 class="description-header">Top 10 Total Fines Collected in September 2018</h1>
               <hr class="description-hr"/>
-              <p>       Full and complete crash data for the city is not available, but using available data from 2008-2017, we find that many of the highest-revenue speed cameras are located in areas with high speed-related crash activity.             
+              <p>       Full and complete crash data for the city is not available, but using available data from 2008-2017, we find that many of the highest-revenue speed cameras are located in areas with high speed-related crash activity.
               </p>
             </article>
           </div>
@@ -99,7 +99,7 @@
             </div>
           </section>
           <!-- End of the Visualizations imageNav Area -->
-          
+
         </div>
       </section>
     </div>
@@ -109,7 +109,7 @@
     <footer class="footer navbar-fixed-bottom">
       <div class="two-toned-footer-color"></div>
       <p class="text-muted text-muted-footer text-center">
-        &copy; Copyright AdoteA, DavidM, EmmanuelO. GWUBootCamp2019
+        &copy; Copyright Adote A., David M., Emmanuel O. GWUBootCamp 2019
       </p>
     </footer>
     <!-- End of footer -->
