--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>D.C. Speeding Cameras</title>
+    <title>MOVING VIOLATIONS IN D.C</title>
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
@@ -76,6 +76,24 @@
         </div>
 
         <div class="col-md-6">
+
+          <!-- Start of Visualizations imageNav Area -->
+          <section id="imageNav-area">
+            <div class="imageNav-content">
+              <h2 class="imageNav-header">Visualizations</h2>
+              <hr />
+              <div id="images">
+                <a href="my_chartjs.html"><img src="img1.png" alt="Top 10 Total Fines Collected in September 2018" class="imageNav-photo"></a>
+                <a href="heatmap.html"><img src="img2.png" alt="Heatmap" class="imageNav-photo"></a>-->
+                <a href="marker.html"><img src="img3.png" alt="Marker Cluster" class="imageNav-photo"></a>-->
+              </div>
+            </div>
+          </section>
+          <!-- End of the Visualizations imageNav Area -->
+
+        </div>
+
+        <div class="col-md-6">
             <article class="description-content">
               <h1 class="description-header">Top 10 Total Fines Collected in September 2018</h1>
               <hr class="description-hr"/>
@@ -84,23 +102,7 @@
             </article>
           </div>
 
-        <div class="col-md-6">
-
-          <!-- Start of Visualizations imageNav Area -->
-          <section id="imageNav-area">
-            <div class="imageNav-content">
-              <h2 class="imageNav-header">Visualizations</h2>
-              <hr />
-              <div id="images">
-                <a href="test_chartjs.html"><img src="img1.png" alt="Top 10 Total Fines Collected in September 2018" class="imageNav-photo"></a>
-                <!-- a href="visualizations/cloudiness.html"><img src="assets/images/Fig3.png" alt="Latitude vs. Cloudiness" class="imageNav-photo"></a>-->
-                <!--a href="visualizations/wind.html"><img src="assets/images/Fig4.png" alt="Latitude vs. Wind Speed" class="imageNav-photo"></a>-->
-              </div>
-            </div>
-          </section>
-          <!-- End of the Visualizations imageNav Area -->
-
-        </div>
+        
       </section>
     </div>
     <!-- End of container -->
